--- a/NodeJS/authentication/package.json
+++ b/NodeJS/authentication/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "joi": "^13.7.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.2"
   }
